Landing page is complete visually.No Known bugs

--- a/index.html
+++ b/index.html
@@ -19,7 +19,18 @@
     
 </head>
 <body>
+  <nav class="navbar-lg navbar-light bg-light">
+    <a class="navbar-brand" id=highSchores href="#">High Scores</a>      
+    <a class="nav-item" id="timer" href="#">Time:0</a>
+  </nav>
     
+  <main class="container" id="headingStart"><h1>Coding Quiz</h1>
+    <section class="row">    
+      <article class="col" id="mainText"><h3>Try to answer the code-related questions within the time limit. Keep in mind that incorrect answers will penalize your scoretime by ten seconds</h3>
+        <button type="button" class="btn btn-primary" id="startQuizBtn">Start Quiz</button>
+      </article>
+    </section>
+  </main>
 
     <script type=text/javascript src=./script.js></script>
     <script
