quiz page randomizer has a functioning random instance to grab btn. Will use this for random answer.

--- a/quiz.html
+++ b/quiz.html
@@ -20,8 +20,8 @@
 </head>
 <body>
   <nav class="navbar-lg navbar-light bg-light">
-    <a class="navbar-brand" id=highSchores href="#">High Scores</a>      
-    <a class="nav-item" id="timer" href="#">Time:0</a>
+    <a class="navbar-brand" id=highScores style="padding-left: 10px;" href="#">High Scores</a>      
+    <a class="nav-item" id="timer">Time:0</a>
   </nav>
     
 
@@ -29,10 +29,10 @@
   <main class="container" id="#">
     <section class="row">    
       <article class="col" id="question1"><h3>Test Question</h3>
-        <button type="button" class="btn btn-primary btn-lg btn-block">Block level button</button>
-        <button type="button" class="btn btn-primary btn-lg btn-block">Block level button</button>
-        <button type="button" class="btn btn-primary btn-lg btn-block">Block level button</button>
-        <button type="button" class="btn btn-primary btn-lg btn-block">Block level button</button>
+        <button id="btn1" type="button" class="btn btn-primary btn-lg btn-block">Block level button1</button>
+        <button id="btn2" type="button" class="btn btn-primary btn-lg btn-block">Block level button2</button>
+        <button id="btn3" type="button" class="btn btn-primary btn-lg btn-block">Block level button3</button>
+        <button id="btn4" type="button" class="btn btn-primary btn-lg btn-block">Block level button4</button>
       </article>
     </section>
   </main>
