Created html page for hig scores.

--- a/highscores.html
+++ b/highscores.html
@@ -26,16 +26,24 @@
     
 
 
-  <main class="container" id="#">
-    <section class="row">    
-      <article class="col" id="question1"><h3>Test Question</h3>
-        <button type="button" class="btn btn-primary btn-lg btn-block">Block level button</button>
-        <button type="button" class="btn btn-primary btn-lg btn-block">Block level button</button>
-        <button type="button" class="btn btn-primary btn-lg btn-block">Block level button</button>
-        <button type="button" class="btn btn-primary btn-lg btn-block">Block level button</button>
-      </article>
-    </section>
-  </main>
+  <title>JS Code Quiz!</title>
+  </head>
+  <body>
+    <div class="container mt-5">
+      <div class="row justify-content-center mt-5 pt-3 pb-3">
+        <div class="col-10 col-lg-8">
+          <h1 id="scoresTitle">High Scores</h1>
+          <hr />
+          <ol id="score-list" class="mb-4"></ol>
+          <button type="button" class="btn btn-primary btn-lg restartBtn">
+            Restart
+          </button>
+          <button type="button" class="btn btn-primary btn-lg clearBtn">
+            Clear Scores
+          </button>
+        </div>
+      </div>
+    </div>
 
 
 
