Added a possible JS file to house the questions.

--- a/highscores.html
+++ b/highscores.html
@@ -26,28 +26,27 @@
     
 
 
-  <title>JS Code Quiz!</title>
+  <title>Coding Quiz</title>
   </head>
   <body>
-    <div class="container mt-5">
-      <div class="row justify-content-center mt-5 pt-3 pb-3">
-        <div class="col-10 col-lg-8">
+    <main class="container mt-5">
+      <section class="row justify-content-center mt-5 pt-3 pb-3">
+        <article class="col-10 col-lg-8">
           <h1 id="scoresTitle">High Scores</h1>
-          <hr />
           <ol id="score-list" class="mb-4"></ol>
-          <button type="button" class="btn btn-primary btn-lg restartBtn">
+          <button type="button" id="restartBtn" class="btn btn-primary btn-lg">
             Restart
           </button>
-          <button type="button" class="btn btn-primary btn-lg clearBtn">
+          <button type="button" id="clearBtn" class="btn btn-primary btn-lg">
             Clear Scores
           </button>
-        </div>
-      </div>
-    </div>
+        </article>
+      </section>
+    </main>
 
 
 
-    <script type=text/javascript src=./script.js></script>
+    <script type=text/javascript src=highscore.js></script>
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
       integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
