--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <h3>
             Try to answer the code-related questions within the time limit. Keep
             in mind that incorrect answers will penalize your scoretime by ten
-            seconds
+            seconds!
           </h3>
           <a
             class="btn btn-primary"
