--- a/quiz.html
+++ b/quiz.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
-    <title>Joel Truitt Quiz</title>
+    <title>Joel Truitt Quiz Questions</title>
     <link rel="stylesheet" type="text/css" href="reset.css" />
     <link
       rel="stylesheet"
