--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <a class="nav-item" id="timer" href="#">Time:0</a>
     </nav>
 
-    <main class="container" id="headingStart">
+    <main class="container" id="landingText">
       <h1>Coding Quiz</h1>
       <section class="row">
         <article class="col" id="mainText">
@@ -30,66 +30,40 @@
             in mind that incorrect answers will penalize your scoretime by ten
             seconds!
           </h3>
-          <a
-            class="btn btn-primary"
-            id="startQuizBtn"
-            href="quiz.html"
-            role="button"
-          >
+          <button class="btn btn-primary" id="startQuizBtn" role="button">
             Start Quiz
-          </a>
+          </button>
         </article>
       </section>
     </main>
 
 
     <!-- Questions Here-->
-    <main class="container .d-none" id="#">
-      <section class="row">
-        <article class="col" id="question1">
-          <h3>Test Question</h3>
-          <button
-            id="btn1 answerChoice"
-            type="button"
-            class="btn btn-primary btn-lg btn-block"
-          >
-            Block level button1
-          </button>
-          <button
-            id="btn2 answerChoice"
-            type="button"
-            class="btn btn-primary btn-lg btn-block"
-          >
-            Block level button2
-          </button>
-          <button
-            id="btn3 answerChoice"
-            type="button"
-            class="btn btn-primary btn-lg btn-block"
-          >
-            Block level button3
-          </button>
-          <button
-            id="btn4 answerChoice"
-            type="button"
-            class="btn btn-primary btn-lg btn-block"
-          >
-            Block level button4
-          </button>
-        </article>
-      </section>
-    </main>
+    <div class="container d-none" id="quiz">
+      <div class="row justify-content-center">
+        <div class="col-10 col-lg-8" id="QA-block">
+          <h3 id="questions" class="mb-4">QUESTION</h3>
+          <ul id="answers" class="list-unstyled">
+            <li class="answerChoice">A)</li>
+            <li class="answerChoice">B)</li>
+            <li class="answerChoice">C)</li>
+            <li class="answerChoice">D)</li>
+          </ul>
+          <p class="feedback"></p>
+        </div>
+      </div>
+    </div>
 
     <!--Final Screen -->
-    <div class="container mt-5 d-none" id="submit-score">
-      <div class="row justify-content-center mt-5 pt-3 pb-3">
+    <div class="container d-none" id="submitScore">
+      <div class="row justify-content-center">
         <div class="col-10 col-lg-8">
           <h2>All Done!</h2>
-          <p id="user-score"></p>
+          <p id="userScore"></p>
           <form class="form-group">
             <label for="new-score">Enter your name: </label>
             <input type="text" id="userName" />
-            <button type="button" class="btn btn-primary btn-lg submitBtn">
+            <button type="button" class="btn btn-primary btn-lg" id = "submitBtn">
               Submit
             </button>
           </form>
