I got a question to display

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     <!-- Questions Here-->
     <div class="container d-none" id="quiz">
       <div class="row justify-content-center">
-        <div class="col-10 col-lg-8" id="QA-block">
-          <h3 id="questions" class="mb-4">QUESTION</h3>
+        <div class="col-10 col-lg-8" id="questionBlock">
+          <h3 id="titleQuestion" class="mb-4">QUESTION</h3>
           <ul id="answers" class="list-unstyled">
             <li class="answerChoice">A)</li>
             <li class="answerChoice">B)</li>
