i think it is all working. i amgoing to check with my tutor.

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   </head>
   <body>
     <nav class="navbar-lg navbar-light bg-light">
-      <a class="navbar-brand" id="highSchores" href="#">High Scores</a>
-      <a class="nav-item" id="timer" href="#">Time:0</a>
+      <a class="navbar-brand" id="highSchores" href="./highscores.html">High Scores</a>
+      <a class="nav-item" id="timer">Time:0</a>
     </nav>
 
     <main class="container" id="landingText">
@@ -49,7 +49,7 @@
             <li class="answerChoice">C)</li>
             <li class="answerChoice">D)</li>
           </ul>
-          <p class="feedback"></p>
+          <p class="accuracy"></p>
         </div>
       </div>
     </div>
